--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,13 @@
 ---
-
+import BaseLayout from "../layouts/BaseLayout.astro"
+import NavBar from "../components/NavBar.astro"
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<BaseLayout title="Página principal" description="Esta es mi página principal donde muestro todo lo relevante al sitio web">
+	<h1>Astro - Página Principal</h1>
+
+	<NavBar></NavBar>
+	
+</BaseLayout>
+	
+
