--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,5 @@
 ---
-const { title, description} = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <html lang="en">
@@ -9,6 +9,7 @@ const { title, description} = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
         <meta name="description" content={description}/>
+		<link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
 		<title>{title}</title>
 	</head>
 	<style>
