--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 const { title, description } = Astro.props;
+import "../styles/global.css";
 ---
 
 <html lang="en">
@@ -12,19 +13,7 @@ const { title, description } = Astro.props;
 		<link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
 		<title>{title}</title>
 	</head>
-	<style>
-		body {
-			background:#001;
-			color:#fff;
-			font-family: 'Lexend', sans-serif;
-			font-size: 1.2rem;
-		}
-
-        a {
-            color: cyan;
-        }
-
-	</style>
+	
 	<body>
 		<slot />
 	</body>
