--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,12 @@
 body {
     margin: 0;
+    background: #001;
+    color: #fff;
+    font-family: "Lexend", sans-serif;
+    font-size: 1.2rem;
+  
+}
+
+a {
+    color: cyan;
 }
